force-app/main/default/objects/OrderItem/fields/AcceptPromotion__c.field-meta.xml
<CustomField>
    <fullName>AcceptPromotion__c</fullName>
    <description>O cliente aceita receber comunicação da Vivo? (campo no objeto Conta)</description>
    <label>Aceita receber comunicação Vivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <label>Sim</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>Não</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>