force-app/main/default/objects/OrderItem/fields/DDD__c.field-meta.xml
<CustomField>
    <fullName>DDD__c</fullName>
    <formula>TEXT(Order.DDD__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DDD</label>
    <type>Text</type>
</CustomField>