force-app/main/default/objects/OrderItem/fields/idLastSearchNumber__c.field-meta.xml
<CustomField>
    <fullName>idLastSearchNumber__c</fullName>
    <description>Última pesquisa de números no SIGAN</description>
    <label>Última Pesquisa de Números</label>
    <length>30</length>
    <type>Text</type>
</CustomField>