force-app/main/default/objects/OrderItem/fields/IsNotAssetizable__c.field-meta.xml
<CustomField>
    <fullName>IsNotAssetizable__c</fullName>
    <formula>PricebookEntry.Product2.vlocity_cmt__IsNotAssetizable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Assetizable</label>
    <type>Checkbox</type>
</CustomField>