force-app/main/default/objects/OrderItem/fields/LegacyIdentifierCalc__c.field-meta.xml
<CustomField>
    <fullName>LegacyIdentifierCalc__c</fullName>
    <description>Utilizado para field mapper de Order Item para Asset. Casos onde é realizada uma jornada de Troca de Produtos e não podemos perder o Legacy Identifier anterior</description>
    <formula>IF (ISBLANK(LegacyIdentifier__c), CASESAFEID(Id), LegacyIdentifier__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identificador no Legado Calculado</label>
    <type>Text</type>
</CustomField>