force-app/main/default/objects/OrderItem/fields/LineType__c.field-meta.xml
<CustomField>
    <fullName>LineType__c</fullName>
    <formula>IF( ISPICKVAL(Product2.vlocity_cmt__Type__c, &apos;Prepaid&apos;),&apos;Pre&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Linha</label>
    <type>Text</type>
</CustomField>