force-app/main/default/objects/OrderItem/fields/PortabilityNumber__c.field-meta.xml
<CustomField>
    <fullName>PortabilityNumber__c</fullName>
    <description>Numero à Portar em uma Habilitação de Portabilidade</description>
    <inlineHelpText>Numero à Portar em uma Habilitação de Portabilidade</inlineHelpText>
    <label>Numero Portabilidade</label>
    <length>20</length>
    <type>Text</type>
</CustomField>