force-app/main/default/objects/OrderItem/fields/ProductSpecificationType__c.field-meta.xml
<CustomField>
    <fullName>ProductSpecificationType__c</fullName>
    <description>CAMPO TESTE, NÃO SUBIR PARA QA/UAT</description>
    <formula>TEXT(Product2.vlocity_cmt__SpecificationType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Specification Type</label>
    <type>Text</type>
</CustomField>